--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,9 @@
       "@nexo-monorepo/nexo-transaction-watcher-api": [
         "libs/nexo/transaction-watcher/api/src/index.ts"
       ],
-      "@nexo-monorepo/shared": ["libs/shared/src/index.ts"]
+      "@nexo-monorepo/shared": ["libs/shared/src/index.ts"],
+      "@nexo-monorepo/infura-shared": ["libs/infura/shared/src/index.ts"],
+      "@nexo-monorepo/ethereum-shared": ["libs/ethereum/shared/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
