--- a/.env.sample
+++ b/.env.sample
@@ -5,10 +5,7 @@ SWAGGER_PASSWORD="..."
 # Application port change as needed
 NEXO_TRANSACTION_WATCHER_PORT=3000
 
-# DB
-DATABASE_HOST="..."
-DATABASE_PORT="..."
-DATABASE_NAME="..."
-DATABASE_USERNAME="..."
-DATABASE_PASSWORD="..."
-DATABASE_SSL="false"
+INFURA_REQUEST_NETWORK="..."
+INFURA_API_KEY=...
+INFURA_WSS_NETWORK=...
+MONGOOSE_URL=...
