--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,25 @@
 version: '3.8'
 
 services:
-  nexo-transaction-watcher-postgres:
-    image: postgres:15.4-alpine
-    restart: always
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
     ports:
-      - 5432:5432
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=nexopass
-      - POSTGRES_DB=nexo-db
-      - PGDATA=./postgres
+      - '27017:27017'
     volumes:
-      - ./postgres/initdb.d:/docker-entrypoint-initdb.d/
-      - db_data:/postgres:cached
+      - db_data:/data/db
 
-  pgadmin:
-    image: 'dpage/pgadmin4'
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.org
-      - PGADMIN_DEFAULT_PASSWORD=admin
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
     ports:
-      - '${PG_ADMIN_PORT-5050}:80'
-    restart: always
-    volumes:
-      - pgadmin:/root/.pgadmin
-    logging:
-      driver: none
+      - '8081:8081'
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+      - ME_CONFIG_MONGODB_PORT=27017
+    depends_on:
+      - mongodb
 
 volumes:
   db_data:
-  pgadmin:
+    driver: local
