--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "private": true,
   "scripts": {
-    "start": "npx nx run-many --parallel --target=serve --skip-nx-cache --configuration=development --projects=transaction-watcher"
+    "start": "npx nx run-many --parallel --target=serve --skip-nx-cache --configuration=development --projects=transaction-watcher",
+    "test": "npx nx run transaction-watcher:test:integration --skip-nx-cache"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
@@ -15,9 +16,9 @@
     "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.9",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.3.1",
-    "@nestjs/typeorm": "^10.0.2",
     "@swc/helpers": "0.5.11",
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
@@ -27,11 +28,13 @@
     "date-fns": "^3.6.0",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.0",
     "express": "^4.19.2",
     "express-basic-auth": "^1.2.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "msw": "^2.3.1",
     "nest-winston": "^1.10.0",
@@ -42,8 +45,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.3",
-    "typeorm": "^0.3.20",
-    "typeorm-fixtures-cli": "^4.0.0",
+    "web3": "^4.9.0",
     "webpack-merge": "^5.10.0",
     "winston": "^3.13.0",
     "zod": "3.23.8"
