--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/typeorm": "^10.0.2",
     "@swc/helpers": "0.5.11",
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
@@ -45,6 +46,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.3",
+    "typeorm": "^0.3.20",
     "web3": "^4.9.0",
     "webpack-merge": "^5.10.0",
     "winston": "^3.13.0",
