--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "lodash": "^4.17.21",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "msw": "^2.3.1",
