--- a/.env.sample
+++ b/.env.sample
@@ -8,4 +8,4 @@ NEXO_TRANSACTION_WATCHER_PORT=3000
 INFURA_REQUEST_NETWORK="..."
 INFURA_API_KEY=...
 INFURA_WSS_NETWORK=...
-MONGOOSE_URL=...
+MONGO_URL=...
