--- a/apps/transaction-watcher/tsconfig.json
+++ b/apps/transaction-watcher/tsconfig.json
@@ -19,7 +19,7 @@
     "strictPropertyInitialization": false,
     "types": ["node"]
   },
-  "include": ["src/**/*", "test/**/*", "scripts/**/*", "../../*.json"],
+  "include": ["src/**/*", "test/**/*", "scripts/**/*", "../../*.json", "util/**/*"],
   "exclude": ["node_modules", "tmp", "_not-integrated"],
   "files": ["global.d.ts"]
 }
