Add url connection string to sample

--- a/.env.sample
+++ b/.env.sample
@@ -8,4 +8,4 @@ NEXO_TRANSACTION_WATCHER_PORT=3000
 INFURA_REQUEST_NETWORK="..."
 INFURA_API_KEY=...
 INFURA_WSS_NETWORK=...
-MONGO_URL=...
+MONGO_URL=mongodb://localhost:27017/watcherdb
