--- a/package.json
+++ b/package.json
@@ -93,6 +93,6 @@
     "ts-loader": "9.4.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "5.4.5"
   }
 }
